Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/4980495/std/NonStatic2StaticImportClash.out
NonStatic2StaticImportClash.java:11:1: compiler.err.already.defined.static.single.import: p1.A1.f
1 error
